--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
   </body>
   <script src="javascripts/scale.fix.js"></script>
   <script src="javascripts/p5.min.js"></script>
-  <script src="script.js"></script>
+  <script src="javascripts/script.js"></script>
 </html>
