Fixed and removed a bunch of site stuff

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Test by mixania</title>
+    <title>mixania's page</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-
+    <div class="title">
+      <h1>Whats <sub>G<sub>U<sub>C<sub>C<sub>I<sub>I<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
+    </div>
 
   </body>
   <script src="javascripts/scale.fix.js"></script>
