Added coll rectangle transitions

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div class="title">
       <h1>Whats <sub>G<sub>U<sub>C<sub>C<sub>I<sub>I<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
+      <h2><a href="https://github.com/mixania/mixania.github.io">Source</a> </h2>
     </div>
 
   </body>
