--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     <![endif]-->
   </head>
   <body>
-    <div class="title">
-      <h1>Whats <sub>G<sub>U<sub>C<sub>C<sub>I<sub>I<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
-      <h2><a href="https://github.com/mixania/mixania.github.io">Source</a> </h2>
-    </div>
+    <h1>Whats Gucci<sub>i<sub>i<sub>i<sub>i<sub>i<sub>i<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
+    <h2>"Squarework" <sub>2015</sub></h2>
 
   </body>
-  <script src="javascripts/scale.fix.js"></script>
   <script src="javascripts/p5.min.js"></script>
   <script src="javascripts/script.js"></script>
 </html>
