--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>mixania's page</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,9 +13,6 @@
   </head>
   <body>
     <h1>Whats Gucci<sub>i<sub>i<sub>i<sub>i<sub>i<sub>i<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
-    <h2>"Squarework" <sub>2016</sub></h2>
-
+    <h2 id="squarework"> <a href="projects/squarework/index.html"> "Squarework" </a> <sub>2016</sub></h2>
   </body>
-  <script src="javascripts/p5.min.js"></script>
-  <script src="javascripts/script.js"></script>
 </html>
