Added Oulipo project

--- a/projects/oulipo/index.html
+++ b/projects/oulipo/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>mixania's page</title>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <style>
+    </style>
   </head>
   <body>
-    <h1>Whats Gucci<sub>i<sub>i<sub>i<sub>i<sub>i<sub>i<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
-    <h2 id="squarework"> <a href="projects/squarework/index.html"> "Squarework" </a> <sub>2016</sub></h2>
-    <h2 id="oulipo"> <a href="projects/oulipo/index.html"> "Oulipo" </a> <sub>2016</sub></h2>
   </body>
+  <script src="../p5.min.js"></script>
+  <script src="script.js"></script>
 </html>
