Oulipo: working poem parser

--- a/projects/oulipo/index.html
+++ b/projects/oulipo/index.html
@@ -14,6 +14,9 @@
     </style>
   </head>
   <body>
+      <input type="text" class="enter" id="inputField"/>
+      <input type="button" value="click" OnClick="generate('inputField')"/>
+      <h3> Output: </h3>
   </body>
   <script src="../p5.min.js"></script>
   <script src="script.js"></script>
