--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link href='https://fonts.googleapis.com/css?family=Arvo:700' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <h1>Whats Gucci<sub>i<sub>i<sub>i<sub>i<sub>i<sub>i<sub>!?</sub></sub></sub></sub></sub></sub></sub><h1>
+    <h1 class="glitch" data-text="Whats Gucci?">Whats Gucci?<h1>
     <h2 id="squarework"> <a href="projects/squarework/index.html"> "Squarework" </a> <sub>2016</sub></h2>
     <h2 id="oulipo"> <a href="projects/oulipo/index.html"> "Oulipo" </a> <sub>2016</sub></h2>
   </body>
