added glitches text to the main site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1 class="glitch" data-text="Whats Gucci?">Whats Gucci?<h1>
-    <h2 id="squarework"> <a href="projects/squarework/index.html"> "Squarework" </a> <sub>2016</sub></h2>
-    <h2 id="oulipo"> <a href="projects/oulipo/index.html"> "Oulipo" </a> <sub>2016</sub></h2>
+    <h2 id="squarework"> <a href="projects/squarework/index.html"> Squarework </a> <sub>2016</sub></h2>
+    <h2 id="oulipo"> <a href="projects/oulipo/index.html"> Oulipo </a> <sub>2016</sub></h2>
   </body>
 </html>
