--- a/projects/squarework/index.html
+++ b/projects/squarework/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>mixania's page</title>
+    <title>squarework</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -11,6 +11,9 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <style>
+    * {
+        margin: 0;
+    }
     </style>
   </head>
   <body>
