made the website cooler

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <![endif]-->
   </head>
   <body>
-    <h1 class="glitch" data-text="Whats Gucci?">Whats Gucci?<h1>
-    <h2 id="squarework"> <a href="projects/squarework/index.html"> Squarework </a> <sub>2016</sub></h2>
-    <h2 id="oulipo"> <a href="projects/oulipo/index.html"> Oulipo </a> <sub>2016</sub></h2>
+    <h1 class="title" data-text="Whats Gucci?">Whats Gucci?</h1>
+
+    <div class="content">
+        <a class="project-link" href="projects/squarework/index.html"><h2>Squarework<span>2016</span></h2></a>
+        <a class="project-link" href="projects/oulipo/index.html"><h2>Oulipo<span>2016</span></h2></a>
+    </div>
   </body>
 </html>
