--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
   </head>
   <body>
     <h1 class="title" data-text="Whats Gucci?">Whats Gucci?</h1>
-
-    <div class="content">
+    <main>
         <a class="project-link" href="projects/squarework/index.html"><h2>Squarework<span>01</span></h2></a>
         <a class="project-link" href="projects/oulipo/index.html"><h2>Oulipo<span>02</span></h2></a>
-    </div>
+    </main>
   </body>
 </html>
