--- a/projects/oulipo/index.html
+++ b/projects/oulipo/index.html
@@ -14,9 +14,11 @@
     </style>
   </head>
   <body>
-      <input type="text" class="enter" id="inputField"/>
-      <input type="button" value="click" OnClick="generate('inputField')"/>
-      <h3> Output: </h3>
+      <main>
+          <input type="text" class="enter" id="inputField"/>
+          <input type="button" value="click" OnClick="generate('inputField')"/>
+          <h3> Output: </h3>
+      </main>
   </body>
   <script src="../p5.min.js"></script>
   <script src="script.js"></script>
