Oulipo: Added some more style

--- a/projects/oulipo/index.html
+++ b/projects/oulipo/index.html
@@ -22,7 +22,7 @@
         }
 
         header {
-            height: 100px;
+            height: 150px;
             background-color: #608FD0;
         }
 
@@ -60,9 +60,25 @@
             color: #4CAF50;
         }
 
+        div {
+            margin: 0 auto;
+            background-color: #60D07E;
+            height: 120px;
+        }
+
+        div.two {
+            background-color: #DEDB3D;
+        }
+
         h2 {
-            color: #608FD0;
-            text-shadow: -2px 2px white;
+            width: 500px;
+            font-size: 40px;
+            margin: 0 auto;
+            padding-top: 30px;
+            color: white;
+            text-shadow: -2px 2px 0 black;
+            /*text-align: left;*/
+            /*position: absolute;*/
         }
 
         .enter {
@@ -98,8 +114,13 @@
       <header>
           <h1><span>O</span><span>u</span><span>l</span><span>i</span><span>p</span><span>o</span><span>o</span><span>o</span><span>o</span><span>o</span><span>!</span></h1>
       </header>
+      <div class="one">
+          <h2>1. Put the words in!</h2>
+      </div>
+      <div class="two">
+          <h2>2. Press submit</h2>
+      </div>
       <main>
-          <h2> Put the words in!</h2>
           <input type="text" class="enter" value="your words..." id="inputField" autofocus/>
           <p>
 
