--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main>
         <a class="project-link" href="projects/squarework/index.html"><h2>Squarework<span>01</span></h2></a>
         <a class="project-link" href="projects/oulipo/index.html"><h2>Oulipo<span>02</span></h2></a>
+        <a class="project-link" href="projects/balls/index.html"><h2>Balls<span>03</span></h2></a>
     </main>
   </body>
 </html>
