--- a/projects/oulipo/index.html
+++ b/projects/oulipo/index.html
@@ -60,14 +60,21 @@
           color: #4CAF50;
       }
 
-      div {
+      div.one {
           margin: 0 auto;
           background-color: #60D07E;
           height: 120px;
       }
 
       div.two {
+          margin: 0 auto;
           background-color: #DEDB3D;
+          height: 120px;
+      }
+
+      .poemTitle {
+          background-color: #D4493F;
+          height: 90px;
       }
 
       h2 {
@@ -77,8 +84,13 @@
           padding-top: 30px;
           color: white;
           text-shadow: -2px 2px 0 black;
-          /*text-align: left;*/
+          text-align: center;
           /*position: absolute;*/
+      }
+
+      .paragraph {
+        margin-top: 15px;
+        margin-bottom: 15px;
       }
 
       .enter {
@@ -108,6 +120,19 @@
           height: 40px;
           width: 200px;
       }
+
+      .output {
+        width: 500px;
+        margin: 0 auto;
+      }
+
+      #off {
+        color: black;
+      }
+
+      #on {
+        color: white;
+      }
     </style>
   </head>
   <body>
@@ -115,7 +140,7 @@
           <h1><span>O</span><span>u</span><span>l</span><span>i</span><span>p</span><span>o</span><span>o</span><span>o</span><span>o</span><span>o</span><span>!</span></h1>
       </header>
       <div class="one">
-          <h2>1. Put the words in!</h2>
+          <h2>1. Paste the words in!</h2>
       </div>
       <div class="two">
           <h2>2. Press submit</h2>
@@ -125,9 +150,10 @@
           <p>
 
           </p>
-          <input type="button" class="button" value="SUBMIT" OnClick="generate('inputField')"/>
+          <input type="button" class="button" value="SUBMIT" OnClick="generate()"/>
       </main>
   </body>
   <script src="../p5.min.js"></script>
+  <script src="../p5.dom.js"></script>
   <script src="script.js"></script>
 </html>
