--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <h1 class="title" data-text="Whats Gucci?">Whats Gucci?</h1>
     <main>
-        <a class="project-link" href="projects/squarework/index.html"><h2>Squarework<span>01</span></h2></a>
-        <a class="project-link" href="projects/oulipo/index.html"><h2>Oulipo<span>02</span></h2></a>
-        <a class="project-link" href="projects/bubbles/index.html"><h2>Bubbles<span>03</span></h2></a>
+        <a class="project-link" href="projects/squarework/index.html"><h2><span>01</span>Squarework</h2></a>
+        <a class="project-link" href="projects/oulipo/index.html"><h2><span>02</span>Oulipo</h2></a>
+        <a class="project-link" href="projects/bubbles/index.html"><h2><span>03</span>Bubbles</h2></a>
     </main>
   </body>
 </html>
