--- a/projects/class4/index.html
+++ b/projects/class4/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>bubbles</title>
+    <title>class4</title>
 
     <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -11,16 +11,31 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <style>
-      * {
+
+      body {
         margin: 0;
-        padding: 0;
+        padding: 20px;
+        background-color: white;
+      }
+
+      #dropzone {
+        padding: 20px 0px;
+        border-style:  dotted;
+        width: 200px;
+        text-align: center;
       }
 
     </style>
   </head>
   <body>
 
+    <h1>Hello</h1>
+    <h2>asdf</h2>
+    <div id="dropzone">
+
+    </div>
   </body>
   <script src="../p5.min.js"></script>
+  <script src="../p5.dom.js"></script>
   <script src="script.js"></script>
 </html>
