Flesch: Adapted @whoisbma's code

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <!-- <body> -->
     <h1 class="title" data-text="Whats Gucci?">Whats Gucci?</h1>
     <main>
         <a class="project-link" href="projects/squarework/index.html"><h2><span>01</span>Squarework</h2></a>
         <a class="project-link" href="projects/oulipo/index.html"><h2><span>02</span>Oulipo</h2></a>
         <a class="project-link" href="projects/bubbles/index.html"><h2><span>03</span>Bubbles</h2></a>
+        <a class="project-link" href="projects/flesch/index.html"><h2><span>04</span>Flesch</h2></a>
     </main>
   </body>
 </html>
