--- a/projects/flesch/index.html
+++ b/projects/flesch/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Class - 04 </title>
+  <title>Flesch </title>
   <script src="../p5.min.js" type="text/javascript"></script>
 
   <script src="../p5.dom.js" type="text/javascript"></script>
