--- a/projects/flesch/index.html
+++ b/projects/flesch/index.html
@@ -7,7 +7,9 @@
 
   <script src="../p5.dom.js" type="text/javascript"></script>
   <script src="script.js" type="text/javascript"></script>
-
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  <linkhref='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <style>
 
     * {
@@ -15,28 +17,56 @@
     }
 
     body {
-      padding: 0px 20px;
       margin: 0;
+      width: 500px;
+      margin: 0 auto;
+      text-align: center;
+      font-family: 'Indie Flower', cursive;
+      color: #666;
     }
 
     canvas {
       vertical-align: top;
     }
 
+    h1 {
+      font-family: 'Poiret One', cursive;
+      color: #444;
+      border-bottom: 5px;
+      border-color: black;
+    }
+
     #dropzone {
       padding: 20px;
-      border-style: dotted;
-      width: 200px;
+      border-style: inset;
+      border-radius: 10px;
       text-align: center;
+
+      /* stripes */
+      background: repeating-linear-gradient(45deg, white, white 19px, #999 19px, #999 20px);
+    }
+
+    #dropzone-text {
+      position: relative;
+    }
+
+    .phead {
+      color: #6CA4BB;
+    }
+
+    textarea {
+      border-radius: 10px;
+      border-color: #666;
+      border-style: double;
     }
 
   </style>
 </head>
 <body>
   <h1>Flesch index reader/generator</h1>
-  <p>Load text from file or in text box.</p>
+  <p class="phead">Load text from file or in text box.</p>
   <p>
-    <div id="dropzone">Drag in a file here</div>
+    <div id="dropzone"> <p id ="dropzone-text">Drag in a file here</p></div>
   <p>
     <textarea id="textinput" rows="10" cols="80">Enter some text</textarea><br>
     <button id="submit">Submit</button>
