Added more styles
* the Flesch index now only displays results with two decimals
* changed the width of the body
* nested dsoem of the elements

--- a/projects/flesch/index.html
+++ b/projects/flesch/index.html
@@ -18,7 +18,7 @@
 
     body {
       margin: 0;
-      width: 500px;
+      width: 450px;
       margin: 0 auto;
       text-align: center;
       font-family: 'Indie Flower', cursive;
@@ -54,6 +54,17 @@
       color: #6CA4BB;
     }
 
+    .report-paragraph {
+      /*background-color: pink;*/
+      display: inline;
+      float: left;
+      width: 150px;
+    }
+
+    p span {
+      color: #6CA4BB;
+    }
+
     textarea {
       border-radius: 10px;
       border-color: #666;
@@ -68,8 +79,8 @@
   <p>
     <div id="dropzone"> <p id ="dropzone-text">Drag in a file here</p></div>
   <p>
-    <textarea id="textinput" rows="10" cols="80">Enter some text</textarea><br>
-    <button id="submit">Submit</button>
+  <textarea id="textinput" rows="10" cols="70">Enter some text</textarea><br>
+  <button id="submit">Submit</button>
   </p>
 </body>
 </html>
