started working on inform
* added sustom css styles
* updated p5.js to the newest version

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a class="project-link" href="projects/oulipo/index.html"><h2><span>02</span>Oulipo</h2></a>
         <a class="project-link" href="projects/bubbles/index.html"><h2><span>03</span>Bubbles</h2></a>
         <a class="project-link" href="projects/flesch/index.html"><h2><span>04</span>Flesch</h2></a>
+        <a class="project-link" href="projects/inform/index.html"><h2><span>05</span>in.fORM alpha</h2></a>
     </main>
   </body>
 </html>
