--- a/projects/inform/index.html
+++ b/projects/inform/index.html
@@ -30,6 +30,16 @@
 
     body #map-page {
       display: none;
+      padding: 15px;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      padding: 15px;
+      height: 100px;
     }
 
     h1, h2 {
@@ -59,6 +69,7 @@
     #about-text {
       position: absolute;
       width: 250px;
+      font-size: 15px;
       border-radius: 10px;
       padding: 10px;
       opacity: 0.9;
@@ -77,28 +88,32 @@
     <!-- SUBMIT FORM BODY -->
     <div id="submit-page">
       <header>
-        <h1 id="title" class="blue"> in.fORM <span class="gray">alpha</span></h1>
+        <h1 id="title" class="blue"> in.fORM <span class="gray">regex-alpha</span></h1>
         <div id="about-text" class="bg-navy aqua">
           <ol>
-            <li><b class="olive">ORM</b> - Object Relational Mapping</li>
-            <li><b class="olive">form</b> - based by Plato's theory of Forms where forms are presented as the most accurate formulations of reality</li>
-            <li><b class="olive">in.form.</b> - getting information in, getting a formulated structure out</li>
+            <li><b class="olive">in. form.</b> - getting information in, getting a formulated structure out</li>
+            <li><b class="olive">form</b> - based on <i>Plato's theory of Forms</i> where a <b class="gray">form</b> is defined as an accurate formulation of reality</li>
             <li><b class="olive">inform</b> - inform the formulated structure effectively</li>
+            <li><b class="olive">ORM</b> - Object Relational Mapping</li>
           </ol>
         </div>
         <h2 id="subtitle" class="navy"> An Object-Relational Mapping tool </h2>
       </header>
       <main>
         <textarea id="text-field" placeholder="Enter your text here..." rows="15"></textarea><br>
-        <a id="submit-button" class="btn btn--s btn--blue">Submit<a>
-        </main>
-        <footer>
-        </footer>
+        <a id="submit-button" class="btn btn--s btn--blue">Submit</a>
+      </main>
+      <footer class="bg-gray">
+        <p class="olive">What works so far</p>
+        <ul>
+          <li>text with a bunch of historic dates</li>
+        </ul>
+      </footer>
     </div>
 
     <!-- Object Relational Map BODY -->
     <div id="map-page">
-      <a id="back-button" class="btn btn--s btn--blue">back<a>
+      <a id="back-button" class="btn btn--s btn--blue">back</a>
     </div>
   </body>
 </html>
