in.fORM: updated with a better regex formula
still seems very obscure

--- a/projects/inform/index.html
+++ b/projects/inform/index.html
@@ -103,8 +103,8 @@
         <textarea id="text-field" placeholder="Enter your text here..." rows="15"></textarea><br>
         <a id="submit-button" class="btn btn--s btn--blue">Submit</a>
       </main>
-      <footer class="bg-gray">
-        <p class="olive">What works so far</p>
+      <footer class="bg-gray  ">
+        <h3 class="olive">What text works so far</h3>
         <ul>
           <li>text with a bunch of historic dates</li>
         </ul>
