in.fORM:  removed the confusing 2D array code
added a "reset" button to the submit-page

--- a/projects/inform/index.html
+++ b/projects/inform/index.html
@@ -77,7 +77,8 @@
 
     #back-button {
       position: absolute;
-      left: 0px;
+      left: 0;
+      top: 0;
       margin: 15px;
     }
 
@@ -102,6 +103,7 @@
       <main>
         <textarea id="text-field" placeholder="Enter your text here..." rows="15"></textarea><br>
         <a id="submit-button" class="btn btn--s btn--blue">Submit</a>
+        <a id="submit-button" class="btn btn--s" href="index.html">Reset</a>
       </main>
       <footer class="bg-gray  ">
         <h3 class="olive">What text works so far</h3>
