in.fORM: tried hidiing/showing generated elements

--- a/projects/inform/index.html
+++ b/projects/inform/index.html
@@ -82,6 +82,13 @@
       margin: 15px;
     }
 
+    .data-set {
+      width: 200px;
+      /*display: none;*/
+    }
+    .data-set p {
+      font-size: 12px;
+    }
 
     </style>
   </head>
