in.fORM: added a user link for text

--- a/projects/inform/index.html
+++ b/projects/inform/index.html
@@ -114,9 +114,9 @@
         <a id="submit-button" class="btn btn--s" href="index.html">Reset</a>
       </main>
       <footer class="bg-gray  ">
-        <h3 class="olive">What text works so far</h3>
+        <h3 class="olive">What text works so far:</h3>
         <ul>
-          <li>text with a bunch of historic dates</li>
+          <li>text with a bunch of historic dates, like <a href="https://en.wikipedia.org/wiki/Mahatma_Gandhi">Mahatma Gandhi</a></li>
         </ul>
       </footer>
     </div>
