--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <![endif]-->
   </head>
   <!-- <body> -->
-    <h1 class="title" data-text="Whats Gucci?">whats gucci?</h1>
+    <h1 class="title" data-text="whats gucci?">whats gucci?</h1>
     <main>
-        <a class="project-link" href="projects/squarework/index.html"><h2><span>01</span>squarework</h2></a>
-        <a class="project-link" href="projects/oulipo/index.html"><h2><span>02</span>oulipo</h2></a>
-        <a class="project-link" href="projects/bubbles/index.html"><h2><span>03</span>bubbles</h2></a>
-        <a class="project-link" href="projects/flesch/index.html"><h2><span>04</span>flesch</h2></a>
-        <a class="project-link" href="projects/inform/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
+        <a class="project-link" href="projects/01/index.html"><h2><span>01</span>squarework</h2></a>
+        <a class="project-link" href="projects/02/index.html"><h2><span>02</span>oulipo</h2></a>
+        <a class="project-link" href="projects/03/index.html"><h2><span>03</span>bubbles</h2></a>
+        <a class="project-link" href="projects/04/index.html"><h2><span>04</span>flesch</h2></a>
+        <a class="project-link" href="projects/05/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
     </main>
   </body>
 </html>
