--- a/projects/05/index.html
+++ b/projects/05/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>in.fORM</title>
+    <title>in.fORM regex-alpha</title>
     <script src="../p5.min.js"></script>
     <script src="../p5.dom.js" type="text/javascript"></script>
     <script src="script.js"></script>
