--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a class="project-link" href="projects/04/index.html"><h2><span>04</span>flesch</h2></a>
         <a class="project-link" href="projects/05/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
         <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06</span>infORM alpha (WIP)</h2></a>
+        <a class="project-link" href="projects/07/index.html"><h2><span>07</span>word-wave</h2></a>
     </main>
   </body>
 </html>
