--- a/projects/08/index.html
+++ b/projects/08/index.html
@@ -25,15 +25,27 @@
       h1 {
         position: absolute;
       }
+
       h1 span {
         font-size: 70%;
       }
+
+      p{
+        position: absolute;
+
+        top: 50px;
+      }
+
 
     </style>
   </head>
   <body class="bg-silver">
 
     <h1 class="blue"> happy-api<span class="aqua"> d3.js</span></h1>
+    <p name="myform">
+      <input id = "input" type="text" value = "word">
+      <button id = "submit">Submit</button>
+    </p>
 
   </body>
   <script src="../d3.js"></script>
