--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06</span>infORM alpha (WIP)</h2></a>
         <a class="project-link" href="projects/07/index.html"><h2><span>07</span>word wave</h2></a>
         <a class="project-link" href="projects/08/index.html"><h2><span>08</span>happy-api</h2></a>
+        <a class="project-link" href="projects/09/index.html"><h2><span>09</span>rita</h2></a>
+        <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
     </main>
   </body>
 </html>
