--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- <body> -->
     <h1 class="title" data-text="whats gucci?">whats gucci?</h1>
     <main>
+        <a class="project-link" href="portfolio/index.html"><h2><span>X</span>portfolio site</h2></a>
         <a class="project-link" href="projects/01/index.html"><h2><span>01</span>squarework</h2></a>
         <a class="project-link" href="projects/02/index.html"><h2><span>02</span>oulipo</h2></a>
         <a class="project-link" href="projects/03/index.html"><h2><span>03</span>bubbles</h2></a>
