--- a/projects/11/index.html
+++ b/projects/11/index.html
@@ -3,16 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>node/title>
+    <title>node</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <style>
 
+    body {
+      font-family: 'Roboto Condensed', sans-serif;
+      background-color: #6C142B;
+      color: white;
+      text-align: center;
+    }
 
+    a {
+      color: white;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: yellow;
+    }
 
     </style>
   </head>
   <body>
+    <h1><a href="http://107.170.39.22:8000/">Link to Server</a></h1>
+    <h2> <a href="https://twitter.com/Intellegentcia">@Intellegentcia</a></h2>
 
   </body>
   <script src="../p5.min.js" type="text/javascript"></script>
