--- a/projects/11/pages/index4.html
+++ b/projects/11/pages/index4.html
@@ -10,16 +10,20 @@
 
     body {
       font-family: 'Roboto Condensed', sans-serif;
-      background-color: #6C142B;
+      background-color: #E2E220;
       color: white;
       text-align: center;
     }
+
 
     a {
       color: white;
       text-decoration: none;
     }
 
+    a span {
+      color #6C142B;
+    }
     a:hover {
       color: yellow;
     }
@@ -27,7 +31,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="http://107.170.39.22:8000/">Link to Server</a></h1>
+    <h1><a href="/1">Link to <span>Red</span> Server</a></h1>
     <h2> <a href="https://twitter.com/Intellegentcia">@Intellegentcia</a></h2>
 
   </body>
