--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a class="project-link" href="projects/08/index.html"><h2><span>08</span>happy-api</h2></a>
         <a class="project-link" href="projects/09/index.html"><h2><span>09</span>rita</h2></a>
         <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
+        <a class="project-link" href="http://107.170.30.71/"><h2><span>11</span>node server</h2></a>
     </main>
   </body>
 </html>
