--- a/projects/09/index.html
+++ b/projects/09/index.html
@@ -26,12 +26,21 @@
       margin-top: 70px;*/
     }
 
+    .strikeout::after {
+      border-bottom: 0.400em solid black;
+      content: "";
+      left: 0;
+      margin-top: calc(0.600em / 2 * -1);
+      position: absolute;
+      right: 0;
+      top: 50%;
+    }
+
     .box {
       width: 300px;
       margin: 0 auto;
       margin-top: 50px;
     }
-
 
     .enter {
       font-family: 'Fjord One', serif;
