--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         <a class="project-link" href="projects/03/index.html"><h2><span>03</span>bubbles</h2></a>
         <a class="project-link" href="projects/04/index.html"><h2><span>04</span>flesch</h2></a>
         <a class="project-link" href="projects/05/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
-        <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06</span>infORM alpha (WIP)</h2></a>
+        <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06
+        </span>infORM alpha (WIP)</h2></a>
         <a class="project-link" href="projects/07/index.html"><h2><span>07</span>word wave</h2></a>
         <a class="project-link" href="projects/08/index.html"><h2><span>08</span>happy-api</h2></a>
-        <a class="project-link" href="projects/09/index.html"><h2><span>09</span>rita</h2></a>
+        <a class="project-link" href="projects/09/index.html"><h2><span>09</span>classified rita</h2></a>
         <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
-        <a class="project-link" href="http://mishabravo.com/"><h2><span>11</span>node server</h2></a>
+        <a class="project-link" href="http://mbrav.com/"><h2><span>11</span>Technelogical Feudalism</h2></a>
     </main>
   </body>
 </html>
