progress on portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,88 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
-    <link href='src/bootstrap.css' rel='stylesheet' type='text/css'>
     <link href='src/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-3 col-lg-2">
-          <nav>
-            <h1>Michael</h1>
-            <h1>Braverman</h1>
-            <ul>
-              <li>
-                <a href="pages/about.html">About</a>
-              </li>
-              <li>
-                <a href="pages/news.html">News</a>
-              </li>
-              <li>
-                <a href="#">Twitter</a>
-              </li>
-              <li>
-                <a href="pages/about.html">Contact</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-
-        <div class="main col-xs-12 col-md-9 col-lg-10">
-          <div class="container-fluid">
-            <div class="image-block col-sm-6 col-md-4 col-lg-3">
-              <div class="hovereffect">
-                <img class="img-responsive" src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box">
-                <div class="overlay">
-                  <h2>Artificial Intellect Box</h2>
-                    <p>
-                      <a href="https://www.youtube.com/watch?v=2c6VdnEl7Dk">VIDEO LINK</a>
-                    </p>
-                </div>
-              </div>
-            </div>
-            <div class="image-block col-sm-6 col-md-4 col-lg-3">
-              <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
-            </div>
-            <div class="image-block col-sm-6 col-md-4 col-lg-3">
-              <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
-            </div>
-            <div class="image-block col-sm-6 col-md-4 col-lg-3">
-              <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
-            </div>
-            <div class="image-block col-sm-6 col-md-4 col-lg-3">
-              <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
-            </div>
-          </div>
-        </div>
+    <nav>
+      <div id="title">
+        <h1>Michael</h1>
+        <br>
+        <h1>Braverman</h1>
       </div>
-    </div>
-
-    <!-- <nav>
-      <h1>Michael</h1>
-      <h1>Braverman</h1>
 
       <ul>
         <li>About</li>
-        <li>News</li>
-        <li>Twitter</li>
+        <li>Projects</li>
+        <li>Resume</li>
+        <li>Blog</li>
         <li>Contact</li>
       </ul>
-    </nav> -->
+    </nav>
 
-    <!-- <main class="row">
+    <main>
       <div>
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
-      <div>
-        <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
-      </div>
-      <div>
-        <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
-      </div>
-    </main> -->
-
-
+    </main>
   </body>
   <script src="script.js" type="text/javascript"></script>
 </html>
