--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
     <title>Michael Braverman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
     <link href='src/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -27,9 +27,15 @@
     </nav>
 
     <main>
-      <div>
+      <div class="crop-img">
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
+      <h1>Contacts</h1>
+      <p>
+        <b>Email:</b> mbrav@protonmail.com
+        <br>
+        <b>Tel:</b> 347-443-0317
+      </p>
     </main>
   </body>
   <script src="script.js" type="text/javascript"></script>
