--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,33 +10,155 @@
     <link href='src/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <!-- NAVIGATION BAR-->
     <nav>
       <div id="title">
         <h1>Michael</h1>
         <br>
         <h1>Braverman</h1>
       </div>
-
       <ul>
-        <li>About</li>
-        <li>Projects</li>
-        <li>Resume</li>
-        <li>Blog</li>
-        <li>Contact</li>
+        <li id="about-link">About</li>
+        <li id="projects-link">Projects</li>
+        <li id="resume-link">Résumé</li>
+        <li id="contact-link">Contact</li>
+        <li id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
       </ul>
     </nav>
 
-    <main>
+    <!-- ABOUT PAGE  -->
+    <main id="about">
       <div class="crop-img">
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
-      <h1>Contacts</h1>
+      <p class="img-caption">
+        Artificial Intellect Box (2015)
+      </p>
+      <h1>About Michael</h1>
+      <p>
+        Michael is concerned about applying technology humanely.
+      </p>
+    </main>
+
+    <!-- PROJECTS PAGE  -->
+    <main id="projects">
+      <div class="crop-img">
+        <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      </div>
+      <p class="img-caption">
+        Artificial Intellect Box (2015)
+      </p>
+      <h1>Conceptuals</h1>
+        <h3>Infrastructural Utopia Tower <b>(2016)</b></h3>
+        <h3>in.fORM alpha <b>(2016)</b></h3>
+        <h3>Artificial Intellect Box <b>(2015)</b></h3>
+      <h1>Projects</h1>
+        <h3>Téchnelogical Feudalism<b>(2016)</b></h3>
+        <h3>Multiverse Clockwork<b>(2016)</b></h3>
+        <h3>They Know What is What<b>(2016)</b></h3>
+        <h3>Endeavour's Guide for the 21st Century<b>(2016)</b></h3>
+        <h3>Flowing Pagoda<b>(2015)</b></h3>
+        <h3>Space Sound Splosion<b>(2015)</b></h3>
+        <h3>Thermo Star<b>(2014)</b></h3>
+
+    </main>
+
+    <!-- RESUME PAGE  -->
+    <main id="resume">
+      <div class="crop-img">
+        <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      </div>
+      <p class="img-caption">
+        Artificial Intellect Box (2015)
+      </p>
+      <h1>Résumé</h1>
+      <h3>Creative Technology, Physical Computing, and Web Interaction Designer</h3>
+
+      <h2>Education</h2>
+        <p>
+          <strong>Parsons School of Design</strong> New York, NY
+          <br>
+          Bachelor of Fine Arts in <u>Design and Technology</u>, class of May 2018
+        </p>
+        <p>
+          <strong>New School Eugene Lang</strong> New York, NY
+          <br>
+          Bachelor of Fine Arts in <u>Philospohy and Media Studies</u>, class of May 2019
+        </p>
+        <p>
+          <strong>Oxford Academy</strong> Westbrook, CT
+          <br>
+          High School, 2012 - 2014
+        </p>
+      <h2>Expereince</h2>
+        <strong>Parsons School of Design</strong> New York, NY
+        <br>
+        Peer Mentor
+      <h2>Skills</h2>
+        <ul>
+          <li>Creative Coding (Processing, Open Frameworks, etc.) </li>
+          <li>Arduino, Raspberry Pi and Internet of Things </li>
+          <li>Web Development (CSS, JavaScript, jQuery, node.js)</li>
+          <li>Music and Sound Production (Logic Pro X) </li>
+          <li>3D Animation and modelling (Bender, Rhino) </li>
+          <li>Analog and Digital Photogrpahy (Adobe Photoshop & Lightroom) </li>
+          <li>Video Editing (Adobe Premier Pro) </li>
+          <li>Operating an Espresso Machine</li>
+        </ul>
+      <h2>Interests and Influences</h2>
+        <ul>
+          <li>Sceptic, Pragmatic, Stoic, and Utilitarian Philosophy</li>
+          <li>Avant-Gard, Cubist, Constructivst, and Dada movements</li>
+          <li>Plato, Aristotle, Sextus </li>
+          <li>Ernest Hemingway, Fyodor Dostoyevsky, Leo Tolstoy</li>
+          <li>Machine Learning</li>
+          <li>Neural Networks</li>
+          <li>Cryptography</li>
+          <li>Yoga</li>
+        </ul>
+      <h2>Languages</h2>
+        <ul>
+          <li>Human</li>
+          <ul>
+            <li>English (fluent)</li>
+            <li>Russian (fluent)</li>
+            <li>Italian (advanced)</li>
+          </ul>
+          <li>Computer</li>
+            <ul>
+              <li>C++</li>
+              <li>JavaScript, HTML, and CSS</li>
+              <li>Python</li>
+              <li>Swift</li>
+              <li>Turbo Pascal (1st)</li>
+              <li>R</li>
+            </ul>
+        </ul>
+    </main>
+
+    <!-- CONTACT PAGE -->
+    <main id="contact">
+      <div class="crop-img">
+        <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      </div>
+      <p class="img-caption">
+        Artificial Intellect Box (2015)
+      </p>
+      <h1>Contact Michael</h1>
       <p>
         <b>Email:</b> mbrav@protonmail.com
         <br>
         <b>Tel:</b> 347-443-0317
+        <br>
+        <b>GPG Key:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC DCD8 537D 2CF1</a>
       </p>
     </main>
+    <footer>
+      <p>
+        © 2016 Michael Braverman
+      </p>
+    </footer>
   </body>
-  <script src="script.js" type="text/javascript"></script>
+  <script src="src/jquery-2.2.3.min.js" type="text/javascript"></script>
+  <script src="src/script.js" type="text/javascript"></script>
 </html>
