--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,14 +14,13 @@
     <nav>
       <div id="title">
         <h1>Michael</h1>
-        <br>
         <h1>Braverman</h1>
       </div>
       <ul>
-        <li id="about-link">About</li>
-        <li id="projects-link">Projects</li>
-        <li id="resume-link">Résumé</li>
-        <li id="contact-link">Contact</li>
+        <li id="about-link"><a href="#about">About</a></li>
+        <li id="projects-link"><a href="#projects">Projects</a></li>
+        <li id="resume-link"><a href="#resume">Résumé</a></li>
+        <li id="contact-link"><a href="#contact">Contact</a></li>
         <li id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
       </ul>
     </nav>
@@ -38,6 +37,10 @@
       <p>
         Michael is concerned about applying technology humanely.
       </p>
+      <h2>Manifesto's</h2>
+      <ul>
+        <li>An Artist is A Neural Psynapse</li>
+      </ul>
     </main>
 
     <!-- PROJECTS PAGE  -->
@@ -58,8 +61,10 @@
         <h3>They Know What is What<b>(2016)</b></h3>
         <h3>Endeavour's Guide for the 21st Century<b>(2016)</b></h3>
         <h3>Flowing Pagoda<b>(2015)</b></h3>
+        <h3>Emotion Cube<b>(2015)</b></h3>
         <h3>Space Sound Splosion<b>(2015)</b></h3>
         <h3>Thermo Star<b>(2014)</b></h3>
+        <h3>Feeduino<b>(2012)</b></h3>
 
     </main>
 
@@ -78,12 +83,16 @@
         <p>
           <strong>Parsons School of Design</strong> New York, NY
           <br>
-          Bachelor of Fine Arts in <u>Design and Technology</u>, class of May 2018
+          Bachelor of Fine Arts in <u>Design and Technology</u>
+          <br>
+          class of May 2018
         </p>
         <p>
           <strong>New School Eugene Lang</strong> New York, NY
           <br>
-          Bachelor of Fine Arts in <u>Philospohy and Media Studies</u>, class of May 2019
+          Bachelor of Fine Arts in <u>Philospohy and Media Studies</u>
+          <br>
+          class of May 2019
         </p>
         <p>
           <strong>Oxford Academy</strong> Westbrook, CT
@@ -93,7 +102,7 @@
       <h2>Expereince</h2>
         <strong>Parsons School of Design</strong> New York, NY
         <br>
-        Peer Mentor
+        <u>Peer Mentor</u> March 2016 - Currentley
       <h2>Skills</h2>
         <ul>
           <li>Creative Coding (Processing, Open Frameworks, etc.) </li>
@@ -101,18 +110,17 @@
           <li>Web Development (CSS, JavaScript, jQuery, node.js)</li>
           <li>Music and Sound Production (Logic Pro X) </li>
           <li>3D Animation and modelling (Bender, Rhino) </li>
-          <li>Analog and Digital Photogrpahy (Adobe Photoshop & Lightroom) </li>
+          <li>Analog and Digital Photogrpahy (Darkroom, Lightroom, Adobe Photoshop) </li>
           <li>Video Editing (Adobe Premier Pro) </li>
-          <li>Operating an Espresso Machine</li>
+          <li>Operating an espresso machine</li>
         </ul>
       <h2>Interests and Influences</h2>
         <ul>
           <li>Sceptic, Pragmatic, Stoic, and Utilitarian Philosophy</li>
           <li>Avant-Gard, Cubist, Constructivst, and Dada movements</li>
           <li>Plato, Aristotle, Sextus </li>
-          <li>Ernest Hemingway, Fyodor Dostoyevsky, Leo Tolstoy</li>
-          <li>Machine Learning</li>
-          <li>Neural Networks</li>
+          <li>Space Exploration and Climate Change</li>
+          <li>Machine Learning & Neural Networks</li>
           <li>Cryptography</li>
           <li>Yoga</li>
         </ul>
@@ -150,13 +158,11 @@
         <br>
         <b>Tel:</b> 347-443-0317
         <br>
-        <b>GPG Key:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC DCD8 537D 2CF1</a>
+        <b>GPG:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC DCD8 537D 2CF1</a>
       </p>
     </main>
     <footer>
-      <p>
         © 2016 Michael Braverman
-      </p>
     </footer>
   </body>
   <script src="src/jquery-2.2.3.min.js" type="text/javascript"></script>
