--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,9 +35,9 @@
       </p>
       <h1>About Michael</h1>
       <p>
-        Michael is concerned about applying technology humanely.
+        Michael is concerned about technology applied inhumanely.
       </p>
-      <h2>Manifesto's</h2>
+      <h2>Manifestos</h2>
       <ul>
         <li>An Artist is A Neural Psynapse</li>
       </ul>
@@ -77,20 +77,20 @@
         Artificial Intellect Box (2015)
       </p>
       <h1>Résumé</h1>
-      <h3>Creative Technology, Physical Computing, and Web Interaction Designer</h3>
+      <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
 
       <h2>Education</h2>
         <p>
           <strong>Parsons School of Design</strong> New York, NY
           <br>
-          Bachelor of Fine Arts in <u>Design and Technology</u>
+          BFA in <u>Design and Technology</u>
           <br>
           class of May 2018
         </p>
         <p>
           <strong>New School Eugene Lang</strong> New York, NY
           <br>
-          Bachelor of Fine Arts in <u>Philospohy and Media Studies</u>
+          BFA in <u>Philospohy and Media Studies</u>
           <br>
           class of May 2019
         </p>
@@ -110,7 +110,7 @@
           <li>Web Development (CSS, JavaScript, jQuery, node.js)</li>
           <li>Music and Sound Production (Logic Pro X) </li>
           <li>3D Animation and modelling (Bender, Rhino) </li>
-          <li>Analog and Digital Photogrpahy (Darkroom, Lightroom, Adobe Photoshop) </li>
+          <li>Analog and Digital Photogrpahy (  Lightroom, Adobe Photoshop) </li>
           <li>Video Editing (Adobe Premier Pro) </li>
           <li>Operating an espresso machine</li>
         </ul>
@@ -125,23 +125,21 @@
           <li>Yoga</li>
         </ul>
       <h2>Languages</h2>
-        <ul>
-          <li>Human</li>
+        Human
           <ul>
             <li>English (fluent)</li>
             <li>Russian (fluent)</li>
             <li>Italian (advanced)</li>
           </ul>
-          <li>Computer</li>
-            <ul>
-              <li>C++</li>
-              <li>JavaScript, HTML, and CSS</li>
-              <li>Python</li>
-              <li>Swift</li>
-              <li>Turbo Pascal (1st)</li>
-              <li>R</li>
-            </ul>
-        </ul>
+        Computer
+          <ul>
+            <li>C++</li>
+            <li>JavaScript, HTML, and CSS</li>
+            <li>Python</li>
+            <li>Swift</li>
+            <li>Turbo Pascal (1st)</li>
+            <li>R</li>
+          </ul>
     </main>
 
     <!-- CONTACT PAGE -->
