better mobile views

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,17 +30,21 @@
       <div class="crop-img">
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
-      <p class="img-caption">
-        Artificial Intellect Box (2015)
-      </p>
-      <h1>About Michael</h1>
-      <p>
-        Michael is concerned about technology applied inhumanely.
-      </p>
-      <h2>Manifestos</h2>
-      <ul>
-        <li>An Artist is A Neural Psynapse</li>
-      </ul>
+      <div class="content">
+        <div class="content">
+          <p class="img-caption">
+            Artificial Intellect Box (2015)
+          </p>
+          <h1>About Michael</h1>
+          <p>
+            Michael is concerned about technology applied inhumanely.
+          </p>
+          <h2>Manifestos</h2>
+          <ul>
+            <li>An Artist is A Neural Psynapse</li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <!-- PROJECTS PAGE  -->
@@ -48,14 +52,15 @@
       <div class="crop-img">
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
-      <p class="img-caption">
-        Artificial Intellect Box (2015)
-      </p>
-      <h1>Conceptuals</h1>
+      <div class="content">
+        <p class="img-caption">
+          Artificial Intellect Box (2015)
+        </p>
+        <h1>Conceptuals</h1>
         <h3>Infrastructural Utopia Tower <b>(2016)</b></h3>
         <h3>in.fORM alpha <b>(2016)</b></h3>
         <h3>Artificial Intellect Box <b>(2015)</b></h3>
-      <h1>Projects</h1>
+        <h1>Projects</h1>
         <h3>Téchnelogical Feudalism<b>(2016)</b></h3>
         <h3>Multiverse Clockwork<b>(2016)</b></h3>
         <h3>They Know What is What<b>(2016)</b></h3>
@@ -65,7 +70,7 @@
         <h3>Space Sound Splosion<b>(2015)</b></h3>
         <h3>Thermo Star<b>(2014)</b></h3>
         <h3>Feeduino<b>(2012)</b></h3>
-
+      </div>
     </main>
 
     <!-- RESUME PAGE  -->
@@ -73,13 +78,15 @@
       <div class="crop-img">
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
-      <p class="img-caption">
-        Artificial Intellect Box (2015)
-      </p>
-      <h1>Résumé</h1>
-      <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
 
-      <h2>Education</h2>
+      <div class="content">
+        <p class="img-caption">
+          Artificial Intellect Box (2015)
+        </p>
+        <h1>Résumé</h1>
+        <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
+
+        <h2>Education</h2>
         <p>
           <strong>Parsons School of Design</strong> New York, NY
           <br>
@@ -99,11 +106,11 @@
           <br>
           High School, 2012 - 2014
         </p>
-      <h2>Expereince</h2>
+        <h2>Expereince</h2>
         <strong>Parsons School of Design</strong> New York, NY
         <br>
         <u>Peer Mentor</u> March 2016 - Currentley
-      <h2>Skills</h2>
+        <h2>Skills</h2>
         <ul>
           <li>Creative Coding (Processing, Open Frameworks, etc.) </li>
           <li>Arduino, Raspberry Pi and Internet of Things </li>
@@ -114,7 +121,7 @@
           <li>Video Editing (Adobe Premier Pro) </li>
           <li>Operating an espresso machine</li>
         </ul>
-      <h2>Interests and Influences</h2>
+        <h2>Interests and Influences</h2>
         <ul>
           <li>Sceptic, Pragmatic, Stoic, and Utilitarian Philosophy</li>
           <li>Avant-Gard, Cubist, Constructivst, and Dada movements</li>
@@ -124,22 +131,23 @@
           <li>Cryptography</li>
           <li>Yoga</li>
         </ul>
-      <h2>Languages</h2>
+        <h2>Languages</h2>
         Human
-          <ul>
-            <li>English (fluent)</li>
-            <li>Russian (fluent)</li>
-            <li>Italian (advanced)</li>
-          </ul>
+        <ul>
+          <li>English (fluent)</li>
+          <li>Russian (fluent)</li>
+          <li>Italian (advanced)</li>
+        </ul>
         Computer
-          <ul>
-            <li>C++</li>
-            <li>JavaScript, HTML, and CSS</li>
-            <li>Python</li>
-            <li>Swift</li>
-            <li>Turbo Pascal (1st)</li>
-            <li>R</li>
-          </ul>
+        <ul>
+          <li>C++</li>
+          <li>JavaScript, HTML, and CSS</li>
+          <li>Python</li>
+          <li>Swift</li>
+          <li>Turbo Pascal (1st)</li>
+          <li>R</li>
+        </ul>
+      </div>
     </main>
 
     <!-- CONTACT PAGE -->
@@ -147,17 +155,20 @@
       <div class="crop-img">
         <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
       </div>
-      <p class="img-caption">
-        Artificial Intellect Box (2015)
-      </p>
-      <h1>Contact Michael</h1>
-      <p>
-        <b>Email:</b> mbrav@protonmail.com
-        <br>
-        <b>Tel:</b> 347-443-0317
-        <br>
-        <b>GPG:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC DCD8 537D 2CF1</a>
-      </p>
+
+      <div class="content">
+        <p class="img-caption">
+          Artificial Intellect Box (2015)
+        </p>
+        <h1>Contact Michael</h1>
+        <p>
+          <b>Email:</b> mbrav@protonmail.com
+          <br>
+          <b>Tel:</b> 347-443-0317
+          <br>
+          <b>GPG:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC DCD8 537D 2CF1</a>
+        </p>
+      </div>
     </main>
     <footer>
         © 2016 Michael Braverman
