Half working toggle menu mobile

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,6 +17,9 @@
         <h1>Braverman</h1>
       </div>
       <ul>
+        <div id="nav-button">
+          MENU
+        </div>
         <li id="about-link"><a href="#about">About</a></li>
         <li id="projects-link"><a href="#projects">Projects</a></li>
         <li id="resume-link"><a href="#resume">Résumé</a></li>
