--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
   <!-- Description  -->
   <meta name="title" content="Michael Braverman" />
-  <meta name="description" content="Michael Braverman's digital identity website" />
+  <meta name="description" content="Michael Braverman's portofolio site" />
   <meta name="keywords" content="design, art, technology, portfolio" />
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
   <!-- Open Graph Protocol -->
 	<meta property="og:title" content="Michael Braverman"/>
-	<meta property="og:image" content="/content/land.jpg"/>
+	<meta property="og:image" content="img/aibox-tmb.jpg"/>
 	<meta property="og:site_name" content="mbrav.com"/>
 	<meta property="og:description" content="design, art, technology, portfolio"/>
 
@@ -20,7 +20,7 @@
   <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="icon" sizes="16x16 32x32" href="favicon.ico">
+  <!-- <link rel="icon" sizes="16x16 32x32" href="favicon.ico"> -->
   <link href='src/style.css' rel='stylesheet' type='text/css'>
 
 </head>
