--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <!-- <link rel="icon" sizes="16x16 32x32" href="favicon.ico"> -->
+  <link rel="icon" sizes="16x16" href="favicon.ico">
   <link href='src/style.css' rel='stylesheet' type='text/css'>
 
 </head>
@@ -53,7 +53,7 @@
   <!-- ABOUT PAGE  -->
   <main id="about">
     <div class="crop-img">
-      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
     <div class="content">
       <div class="content">
@@ -74,7 +74,7 @@
   <!-- PROJECTS PAGE  -->
   <main id="projects">
     <div class="crop-img">
-      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
     <div class="content">
       <div class="img-caption">
@@ -103,7 +103,7 @@
   <!-- RESUME PAGE  -->
   <main id="resume">
     <div class="crop-img">
-      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
 
     <div class="content">
@@ -183,7 +183,7 @@
   <!-- CONTACT PAGE -->
   <main id="contact">
     <div class="crop-img">
-      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+      <img src="src/img/01.jpg" alt="Artificial Intellegence Box" />
     </div>
 
     <div class="content">
@@ -218,6 +218,8 @@
       2016 MB
   </footer>
 </body>
+<!-- <script src="code/projects/p5.min.js" type="text/javascript"></script>
+<script src="code/projects/12/script.js" type="text/javascript"></script> -->
 <script src="src/jquery-2.2.3.min.js" type="text/javascript"></script>
 <script src="src/script.js" type="text/javascript"></script>
 </html>
