--- a/code/index.html
+++ b/code/index.html
@@ -12,22 +12,120 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <!-- <body> -->
+  <body>
     <h1 class="title" data-text="whats gucci?">whats gucci?</h1>
     <main>
-        <a class="project-link" href="portfolio/index.html"><h2><span>X</span>portfolio site</h2></a>
         <a class="project-link" href="projects/01/index.html"><h2><span>01</span>squarework</h2></a>
         <a class="project-link" href="projects/02/index.html"><h2><span>02</span>oulipo</h2></a>
         <a class="project-link" href="projects/03/index.html"><h2><span>03</span>bubbles</h2></a>
         <a class="project-link" href="projects/04/index.html"><h2><span>04</span>flesch</h2></a>
         <a class="project-link" href="projects/05/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
-        <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06
-        </span>infORM alpha (WIP)</h2></a>
+        <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06</span>infORM alpha <b> (wip)</b></h2></a>
         <a class="project-link" href="projects/07/index.html"><h2><span>07</span>word wave</h2></a>
         <a class="project-link" href="projects/08/index.html"><h2><span>08</span>happy-api</h2></a>
         <a class="project-link" href="projects/09/index.html"><h2><span>09</span>classified rita</h2></a>
         <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
-        <a class="project-link" href="http://mbrav.com/"><h2><span>11</span>Technelogical Feudalism</h2></a>
+        <a class="project-link" href="http://mbrav.com/"><h2><span>11</span>Téchnelogical Feudalism<b> (final)</b></h2></a>
+        <a class="project-link" href="projects/10/index.html"><h2><span>12</span>eccentric waves</h2></a>
     </main>
   </body>
+  <script type="text/javascript">
+
+    var allElements = document.getElementsByTagName('span' );
+
+    for (var i = 0; i < allElements.length; i++) {
+      var text = allElements[i].textContent;
+      allElements[i].textContent = roman(text);
+    }
+
+    // roman numerator
+    function roman(num) {
+      var lookup = {M:1000, CM:900, D:500, CD:400, C:100, XC:90, L:50, XL:40, X:10, IX:9, V:5, IV:4, I:1}
+      var string = '';
+      for (var i in lookup) {
+        while (num >= lookup[i]) {
+          string += i;
+          num -= lookup[i];
+        }
+      }
+      return string;
+    }
+
+    var morse = {
+      a: ". ___",
+      b: "___ . . .",
+      c: "___ . ___ .",
+      d: "___ . .",
+      e: ".",
+      f: ". . ___ .",
+      g: "___ ___ .",
+      h: ". . . .",
+      i: ". .",
+      j: ". ___ ___ ___ ___",
+      k: "___ . ___",
+      l: ". ___ . .",
+      m: "___ ___",
+      n: "___ .",
+      o: "___ ___ ___",
+      p: ". ___ ___ .",
+      q: "___ ___ . ___",
+      r: ". ___ .",
+      s: ". . .",
+      t: "___",
+      u: ". . ___",
+      v: ". . . ___",
+      w: ". ___ ___",
+      x: "___ . . ___",
+      y: "___ . ___ ___",
+      z: "___ ___ . .",
+      1: ". ___ ___ ___",
+      2: ". . ___ ___ ___",
+      3: ". . . ___ ___",
+      4: ". . . . ___",
+      5: ". . . . .",
+      6: "___ . . . .",
+      7: "___ ___ . . .",
+      8: "___ ___ ___ . .",
+      9: "___ ___ ___ ___ .",
+      0: "___ ___ ___ ___ ___",
+      " ": "/", //spaces
+      //I don'nt know if the following are correct or not...
+      ".": ". ___ . ___ . ___",
+      ",": "___ . . ___",
+      ":": "___ . . .",
+      "?": ". . ___ . .",
+      "'": ". ____ .",
+      "-": "___ . . . . ___",
+      "/": "___ . . ___ .",
+      "(": "___ . ___ .",
+      ")": "___ . ___ . ___",
+      "\"": ". ___ . . ___ .",
+      "@": ". ___ . ___ .",
+      "=": "___ . . . ___",
+      "&": ". ___ . . .",
+      ";": "___ . ___ . ___ .",
+      "+": ". ___ . ___ .",
+      "_": ". . ___ . __",
+      "$": ". . . ___ . . ___",
+      "!": "___ . ___ . ____"
+    };
+
+    var inp = document.getElementById("inp");
+    var butt = document.getElementById("butt");
+    var out = document.getElementById("out");
+
+    butt.addEventListener("click", function() {
+      var conv = inp.value;
+      conv = conv.toLowerCase();
+      conv = conv.split("");
+      for (var i = 0; i < conv.length; i++) {
+        conv[i] = morse[conv[i]];
+      }
+
+      conv = conv.join(" ");
+      console.log(conv);
+      out.innerHTML = conv;
+    });
+
+  </script>
 </html>
